add why section

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </address>
             </header>
 
-            <div class="page-title">
-                <h1 class="page-title__title">
+            <div class="hero-title">
+                <h1 class="hero-title__title">
                     натуральные шоколадные батончики
                 </h1>
-                <p class="page-title__subtitle">
+                <p class="hero-title__subtitle">
                     Наши батончики идеально подходят для тех, кто следит за своим здоровьем
                 </p>
-                <a class="page-title__btn btn" href="">заказать</a>
+                <a class="hero-title__btn btn" href="">заказать</a>
             </div>
 
             <div class="sidebar">
@@ -112,7 +112,51 @@
 
         </div>
     </section>
+
+
     <section class="why-section">
+        <div class="container why">
+
+            <h2 class="why__title">почему chocco?</h2>
+            <p class="why__subtitle">
+                В нашем мире все происходит очень быстро, поэтому мы делаем
+                батончики, которые удобно взять с собой.
+            </p>
+
+            <ul class="why__list">
+                <li class="why__item">
+                    <div class="why__item-icon">
+                        <img class="why__item-pic" src="./img/icons/1.svg" alt="">
+                    </div>
+                    <div class="why__item-title">Полезно</div>
+                    <p class="why__item-text">
+                        Натуральность - ключевое качество нашей продукции.
+                        Мы используем только природные ингредиенты.
+                    </p>
+                </li>
+                <li class="why__item">
+                    <div class="why__item-icon">
+                        <img class="why__item-pic" src="./img/icons/3.svg" alt="">
+                    </div>
+                    <div class="why__item-title">Полезно</div>
+                    <p class="why__item-text">
+                        Нежный, ненавязчивый, изысканный – так клиенты описывают вкусовые качества наших батончиков.
+                    </p>
+                </li>
+                <li class="why__item">
+                    <div class="why__item-icon">
+                        <img class="why__item-pic" src="./img/icons/2.svg" alt="">
+                    </div>
+                    <div class="why__item-title">Полезно</div>
+                    <p class="why__item-text">
+                        Высокое содержание качественного белка,
+                        а также всех необходимых витаминов и минералов.
+                    </p>
+                </li>
+            </ul>
+            <img class="leaf-4" src="./img/icons/why-page/leaf4.png" alt="">
+            <img class="raspberry" src="./img/icons/why-page/raspberry.png" alt="">
+        </div>
 
     </section>
     <section class="price-section">
