--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=1000">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
+    <title>choco 1st week</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 <div class="wrapper">
+    <div class="maincontent">
     <section class="hero">
-        <div class="container">
+        <div class="container hero__container">
             <header class="header">
                 <a class="logo" href="/">
                     <img class="logo__pic" src="./img/icons/logo.png" alt="">
@@ -101,13 +101,13 @@
                 </ul>
             </div>
 
-            <img class="leaf" src="./img/icons/main-page/tracery.png" alt="">
-            <img class="bars" src="./img/icons/main-page/bars.png" alt="">
-            <img class="leaf-1" src="./img/icons/main-page/leaf1.png" alt="">
-            <img class="leaf-2" src="./img/icons/main-page/leaf2.png" alt="">
-            <img class="leaf-3" src="./img/icons/main-page/leaf3.png" alt="">
-            <img class="berries-1" src="./img/icons/main-page/berries1.png" alt="">
-            <img class="berries-2" src="./img/icons/main-page/berries2.png" alt="">
+<!--            <img class="leaf" src="./img/icons/main-page/tracery.png" alt="">-->
+<!--            <img class="bars" src="./img/icons/main-page/bars.png" alt="">-->
+<!--            <img class="leaf-1" src="./img/icons/main-page/leaf1.png" alt="">-->
+<!--            <img class="leaf-2" src="./img/icons/main-page/leaf2.png" alt="">-->
+<!--            <img class="leaf-3" src="./img/icons/main-page/leaf3.png" alt="">-->
+<!--            <img class="berries-1" src="./img/icons/main-page/berries1.png" alt="">-->
+<!--            <img class="berries-2" src="./img/icons/main-page/berries2.png" alt="">-->
 
 
         </div>
@@ -159,12 +159,47 @@
         </div>
 
     </section>
-    <section class="price-section">
 
+    <section class="order-section">
+        <div class="container order">
+            <div class="order__img-wrapper">
+<!--                <img class="order__img" src="./img/icons/order-page/bars1.png" alt="">-->
+            </div>
+            <div class="order__desc">
+
+                <div class="order__dropdown">
+                    <img class="order__dropdown-icon" src="" alt="">
+                    <span class="order__dropdown-title">состав</span>
+                </div>
+
+                <h2 class="order__title">Батончик “Гранола виноград”</h2>
+                <p class="order__text">
+                    Гранола из винограда, грецкого ореха и кунжутных семечек.
+                    В состав также входят:
+                    сухое молоко, заменитель сахара и какао бобы.
+                </p>
+                <ul class="order__props">
+                    <li class="order__props">
+                        <span class="order__props-name">Калорийность</span>
+                        <span class="order__props-value">110 ккал</span>
+                    </li>
+                    <li class="order__props">
+                        <span class="order__props-name">Вес</span>
+                        <span class="order__props-value">95 грамм</span>
+                    </li>
+                </ul>
+                <div class="order__price">140 ₽</div>
+                <a class="order__btn btn" href="">заказать</a>
+
+            </div>
+        </div>
     </section>
+
     <section class="team-section">
 
     </section>
+
+    </div>
 </div>
 </body>
 </html>
