--- a/index.html
+++ b/index.html
@@ -114,86 +114,160 @@
     </section>
 
 
-    <section class="why-section">
-        <div class="container why">
-
-            <h2 class="why__title">почему chocco?</h2>
-            <p class="why__subtitle">
-                В нашем мире все происходит очень быстро, поэтому мы делаем
-                батончики, которые удобно взять с собой.
-            </p>
-
-            <ul class="why__list">
-                <li class="why__item">
-                    <div class="why__item-icon">
-                        <img class="why__item-pic" src="./img/icons/1.svg" alt="">
-                    </div>
-                    <div class="why__item-title">Полезно</div>
-                    <p class="why__item-text">
-                        Натуральность - ключевое качество нашей продукции.
-                        Мы используем только природные ингредиенты.
-                    </p>
-                </li>
-                <li class="why__item">
-                    <div class="why__item-icon">
-                        <img class="why__item-pic" src="./img/icons/3.svg" alt="">
-                    </div>
-                    <div class="why__item-title">Полезно</div>
-                    <p class="why__item-text">
-                        Нежный, ненавязчивый, изысканный – так клиенты описывают вкусовые качества наших батончиков.
-                    </p>
-                </li>
-                <li class="why__item">
-                    <div class="why__item-icon">
-                        <img class="why__item-pic" src="./img/icons/2.svg" alt="">
-                    </div>
-                    <div class="why__item-title">Полезно</div>
-                    <p class="why__item-text">
-                        Высокое содержание качественного белка,
-                        а также всех необходимых витаминов и минералов.
-                    </p>
-                </li>
-            </ul>
-            <img class="leaf-4" src="./img/icons/why-page/leaf4.png" alt="">
-            <img class="raspberry" src="./img/icons/why-page/raspberry.png" alt="">
-        </div>
-
-    </section>
-
-    <section class="order-section">
-        <div class="container order">
-            <div class="order__img-wrapper">
-<!--                <img class="order__img" src="./img/icons/order-page/bars1.png" alt="">-->
-            </div>
-            <div class="order__desc">
-
-                <div class="order__dropdown">
-                    <img class="order__dropdown-icon" src="" alt="">
-                    <span class="order__dropdown-title">состав</span>
-                </div>
-
-                <h2 class="order__title">Батончик “Гранола виноград”</h2>
-                <p class="order__text">
-                    Гранола из винограда, грецкого ореха и кунжутных семечек.
-                    В состав также входят:
-                    сухое молоко, заменитель сахара и какао бобы.
+    <section class="section benefits-section">
+        <div class="container">
+            <div class="headline">
+                <h2 class="section__title headline__title">почему chocco?</h2>
+                <p class="headline__subtitle">
+                    В нашем мире все происходит очень быстро, поэтому мы делаем
+                    батончики, которые удобно взять с собой.
                 </p>
-                <ul class="order__props">
-                    <li class="order__props">
-                        <span class="order__props-name">Калорийность</span>
-                        <span class="order__props-value">110 ккал</span>
-                    </li>
-                    <li class="order__props">
-                        <span class="order__props-name">Вес</span>
-                        <span class="order__props-value">95 грамм</span>
-                    </li>
-                </ul>
-                <div class="order__price">140 ₽</div>
-                <a class="order__btn btn" href="">заказать</a>
-
             </div>
+
+            <ul class="benefits">
+                <li class="benefits__item benefit">
+                    <div class="benefit__image">
+                        <div class="benefit__image-wrapper">
+                            <img class="benefit__icon" src="./img/icons/1.svg" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="benefit__text">
+                        <h3 class="benefit__title">Полезно</h3>
+                        <div class="benefit__desc">
+                            <p>
+                                Натуральность - ключевое качество нашей продукции.
+                                Мы используем только природные ингредиенты.
+                            </p>
+                        </div>
+                    </div>
+
+                </li>
+                <li class="benefits__item benefit">
+                    <div class="benefit__image">
+                        <div class="benefit__image-wrapper">
+                            <img class="benefit__icon" src="./img/icons/3.svg" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="benefit__text">
+                        <h3 class="benefit__title">Вкусно</h3>
+                        <div class="benefit__desc">
+                            <p>
+                                Нежный, ненавязчивый, изысканный – так клиенты описывают вкусовые качества наших батончиков.
+                            </p>
+                        </div>
+                    </div>
+
+                </li>
+                <li class="benefits__item benefit">
+                    <div class="benefit__image">
+                        <div class="benefit__image-wrapper">
+                            <img class="benefit__icon" src="./img/icons/2.svg" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="benefit__text">
+                        <h3 class="benefit__title">Питательно</h3>
+                        <div class="benefit__desc">
+                            <p>
+                                Высокое содержание качественного белка, а также всех необходимых витаминов и минералов.
+                            </p>
+                        </div>
+                    </div>
+
+                </li>
+<!--                <li class="benefit__item">-->
+<!--                    <div class="benefit__item-icon">-->
+<!--                        <img class="benefit__item-pic" src="./img/icons/3.svg" alt="">-->
+<!--                    </div>-->
+<!--                    <div class="benefit__item-title">Полезно</div>-->
+<!--                    <p class="benefit__item-text">-->
+<!--                        Нежный, ненавязчивый, изысканный – так клиенты описывают вкусовые качества наших батончиков.-->
+<!--                    </p>-->
+<!--                </li>-->
+<!--                <li class="benefit__item">-->
+<!--                    <div class="benefit__item-icon">-->
+<!--                        <img class="benefit__item-pic" src="./img/icons/2.svg" alt="">-->
+<!--                    </div>-->
+<!--                    <div class="benefit__item-title">Полезно</div>-->
+<!--                    <p class="benefit__item-text">-->
+<!--                        Высокое содержание качественного белка,-->
+<!--                        а также всех необходимых витаминов и минералов.-->
+<!--                    </p>-->
+<!--                </li>-->
+            </ul>
+<!--            <img class="leaf-4" src="./img/icons/why-page/leaf4.png" alt="">-->
+<!--            <img class="raspberry" src="./img/icons/why-page/raspberry.png" alt="">-->
         </div>
+
     </section>
+
+        <section class="section reviews-section">
+            <div class="container">
+                <h2 class="section__title">Отзывы</h2>
+                <div class="reviews">
+                    <div class="reviews__display">
+                        <div class="reviews__display-inner">
+                            <div class="reviews__avatar">
+                                <img
+                                        src="./img/icons/review-page/girl.jpg"
+                                        alt=""
+                                        class="reviews__avatar-img"
+                                />
+                            </div>
+                            <article class="reviews__content">
+                                <h3 class="reviews__title">Лучший перекус</h3>
+                                <div class="reviews__text">
+                                    <p>
+                                        Я ем малыми порциями, но часто. Это повышает мою
+                                        продуктивность в разы. В течение дня сижу за компьютером
+                                        и часто отходить в кафе или на кухню просто не могу себе
+                                        позволить. А батончик – он всегда под рукой. Это приятно
+                                        и удобно.
+                                    </p>
+                                </div>
+                                <div class="reviews__author">Алена Хмельницкая</div>
+                            </article>
+                        </div>
+                    </div>
+                    <ul class="reviews__switcher">
+                        <li
+                                class="reviews__switcher-item interactive-avatar interactive-avatar--active"
+                        >
+                            <a href="#" class="interactive-avatar__link">
+                                <img
+                                        src="./img/icons/review-page/girl.jpg"
+                                        alt="black hair girl"
+                                        class="interactive-avatar__img"
+                                />
+                            </a>
+                        </li>
+                        <li class="reviews__switcher-item interactive-avatar">
+                            <a href="#" class="interactive-avatar__link">
+                                <img
+                                        src="./img/icons/review-page/girl.jpg"
+                                        alt="black hair girl"
+                                        class="interactive-avatar__img"
+                                />
+                            </a>
+                        </li>
+                        <li class="reviews__switcher-item interactive-avatar">
+                            <a href="#" class="interactive-avatar__link">
+                                <img
+                                        src="./img/icons/review-page/girl.jpg"
+                                        alt="black hair girl"
+                                        class="interactive-avatar__img"
+                                />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
     <section class="team-section">
 
