--- a/index.html
+++ b/index.html
@@ -64,27 +64,6 @@
                     <a class="hero-title__btn btn" href="">заказать</a>
                 </div>
 
-                <div class="sidebar">
-                    <ul class="sidebar__list">
-                        <li class="sidebar__item">
-                            <div class="sidebar__icon"></div>
-                        </li>
-                        <li class="sidebar__item">
-                            <div class="sidebar__icon"></div>
-                        </li>
-                        <li class="sidebar__item">
-                            <div class="sidebar__icon"></div>
-                        </li>
-                        <li class="sidebar__item">
-                            <div class="sidebar__icon"></div>
-                        </li>
-                        <li class="sidebar__item">
-                            <div class="sidebar__icon"></div>
-                        </li>
-                    </ul>
-
-                </div>
-
                 <div class="advantages">
                     <ul class="advantages__list">
                         <li class="advantages__item">
@@ -398,5 +377,27 @@
 
     </div>
 </div>
+
+<div class="fixed-menu">
+    <ul class="fixed-menu__list">
+        <li class="fixed-menu__item">
+            <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item fixed-menu__item--active">
+            <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a href="#" class="fixed-menu__link"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a href="#" class="fixed-menu__link"></a>
+        </li>
+    </ul>
+
+</div>
+
 </body>
 </html>
