add hero section for tablets

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1000">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
     <title>choco 1st week</title>
     <link rel="stylesheet" href="./css/main.css">
@@ -41,7 +41,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <a href="tel:+78009039090" class="phone-number">
+                    <a href="tel:+78009039090" class="phone-number header__phone-number">
                   <span class="phone-number__icon">
                     <img
                             src="./img/icons/phone.svg"
