--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
 
+                    <div class="hamburger">
+                        <span class="hamburger__item"></span>
+                        <span class="hamburger__item"></span>
+                        <span class="hamburger__item"></span>
+                    </div>
+
                 </header>
 
                 <div class="hero-title">
