--- a/index.html
+++ b/index.html
@@ -74,19 +74,25 @@
                     <ul class="advantages__list">
                         <li class="advantages__item">
                             <div class="advantages__icon-wrapper">
-                                <img class="advantages__icon" src="./img/icons/5.svg" alt="">
+                                <svg class="advantages__svg-icon">
+                                    <use xlink:href="./img/icons/sprite.svg#leaf"></use>
+                                </svg>
                             </div>
                             <p class="advantages__text">100% натуральный продукт</p>
                         </li>
                         <li class="advantages__item">
                             <div class="advantages__icon-wrapper">
-                                <img class="advantages__icon" src="./img/icons/6.svg" alt="">
+                                <svg class="advantages__svg-icon">
+                                <use xlink:href="./img/icons/sprite.svg#truck"></use>
+                            </svg>
                             </div>
                             <p class="advantages__text">3-5 дней доставка по РФ</p>
                         </li>
                         <li class="advantages__item">
                             <div class="advantages__icon-wrapper">
-                                <img class="advantages__icon" src="./img/icons/4.svg" alt="">
+                                <svg class="advantages__svg-icon">
+                                    <use xlink:href="./img/icons/sprite.svg#tape"></use>
+                                </svg>
                             </div>
                             <p class="advantages__text">Не портит фигуру</p>
                         </li>
@@ -334,7 +340,7 @@
                         <a href="tel:+78009039090" class="phone-number phone-number--theme--green">
                   <span class="phone-number__icon">
                     <img
-                            src="./img/icons/phone.svg"
+                            src="./img/icons/phone-green.svg"
                             class="phone-number__icon-elem"
                             alt="phone icon"
                     />
@@ -345,35 +351,31 @@
                     <ul class="socials">
                         <li class="socials__item">
                             <a class="socials__link" href="#">
-                                <img
-                                        src="./img/icons/vk.svg"
-                                        alt=""
-                                        class="socials__icon"
-                                />
+                                <svg class="socials__icon">
+                                    <use xlink:href="./img/icons/sprite.svg#vk"></use>
+                                </svg>
                             </a>
                             <a class="socials__link" href=""></a>
                         </li>
                         <li class="socials__item">
                             <a class="socials__link" href="#">
-                                <img src="./img/icons/f.svg" alt="" class="socials__icon"/>
+                                <svg class="socials__icon">
+                                    <use xlink:href="./img/icons/sprite.svg#fb"></use>
+                                </svg>
                             </a>
                         </li>
                         <li class="socials__item">
                             <a class="socials__link" href="#">
-                                <img
-                                        src="./img/icons/in.svg"
-                                        alt=""
-                                        class="socials__icon"
-                                />
+                                <svg class="socials__icon">
+                                    <use xlink:href="./img/icons/sprite.svg#inst"></use>
+                                </svg>
                             </a>
                         </li>
                         <li class="socials__item">
                             <a class="socials__link" href="#">
-                                <img
-                                        src="./img/icons/tw.svg"
-                                        alt=""
-                                        class="socials__icon"
-                                />
+                                <svg class="socials__icon">
+                                    <use xlink:href="./img/icons/sprite.svg#tw"></use>
+                                </svg>
                             </a>
                         </li>
                     </ul>
