add slider layout

--- a/index.html
+++ b/index.html
@@ -179,6 +179,82 @@
 
         </section>
 
+        <section class="section slider-section">
+            <div class="arrow arrow--left">
+                <img class="arrow--left-icon" src="./img/icons/arrow.svg" alt="">
+            </div>
+
+            <div class="container slider-container">
+                <div class="slider__wrapper">
+                    <ul class="slider__list">
+                        <li class="slider__item">
+                            <div class="slider-desc">
+                                <div class="dropdown">
+                                    <div class="dropdown__icon-wrapper">
+                                        <img class="dropdown__icon" src="./img/icons/chocolate-bar.svg" alt="">
+                                        <span class="dropdown__title">Состав</span>
+                                    </div>
+                                    <div class="dropdown__menu">
+                                        <ul class="dropdown__list">
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/grape.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Виноград</span>
+                                                <span class="dropdown__item-weight">25г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/nut.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Орех</span>
+                                                <span class="dropdown__item-weight">32г</span>
+                                            </li>
+                                            <li class="dropdown__item">
+                                                <div class="dropdown__item-icon-wrapper">
+                                                    <img class="dropdown__item-icon" src="./img/icons/almond.svg" alt="">
+                                                </div>
+                                                <span class="dropdown__item-name">Кунжутное семя</span>
+                                                <span class="dropdown__item-weight">20г</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2 class="slider-desc__title">Батончик “Гранола виноград”</h2>
+                                <div class="slider-desc__subtitle">
+                                    <p>
+                                        Гранола из винограда, грецкого ореха и кунжутных семечек.
+                                        В состав также входят: сухое молоко, заменитель сахара и какао бобы.
+                                    </p>
+                                </div>
+                                <div class="slider-desc__props">
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">Каллорийность</span>
+                                        <span class="slider-desc__props-value">110 ккал</span>
+                                    </div>
+                                    <div class="slider-desc__props-col">
+                                        <span class="slider-desc__props-name">Вес</span>
+                                        <span class="slider-desc__props-value">95 грамм</span>
+                                    </div>
+                                </div>
+                                <div class="slider-desc__price">140 ₽</div>
+                                <div class="order-form-btn btn">Заказать</div>
+
+                            </div>
+                        </li>
+                        
+                    </ul>
+                </div>
+
+
+
+            </div>
+
+            <div class="arrow arrow--right">
+                <img class="arrow--right-icon" src="./img/icons/arrow.svg" alt="">
+            </div>
+        </section>
+
         <section class="section reviews-section">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
